--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=RmPlannerApi
+spring.datasource.url=jdbc:mysql://localhost:3306/rmplanner
+spring.datasource.username=root
+spring.datasource.password=
