--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=RmPlannerApi
 spring.datasource.url=jdbc:mysql://localhost:3306/rmplanner
 spring.datasource.username=root
 spring.datasource.password=
+
+api.security.token.secret=${JWT_SECRET:default}
